--- a/404.html
+++ b/404.html
@@ -17,6 +17,7 @@
     <script src="https://kit.fontawesome.com/f836eb7316.js" crossorigin="anonymous"></script>
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
 </head>
+
 <body class="container-fluid d-flex flex-column justify-content-between">
     <script>
         AOS.init();
@@ -753,9 +754,10 @@
     <div class="animaciones">
         <footer data-aos="fade-up" data-aos-duration="1000" data-aos-once=true class="container-fluid">
             <div class="row">
-                <div class="d-flex justify-content-between px-3 flex-wrap mx-auto ">
-                    <img src="/assets/img/logo_cat_cafe.png" alt="Logo Miau Café"
-                        class="logo logofoot col-12 col-lg-1 mx-auto">
+                <div class="d-flex justify-content-between px-3 flex-wrap mx-auto">
+                    <a href="/index.html" class="logofoot ">
+                        <img src="/assets/img/logo_cat_cafe.png" alt="Logo Miau Café" class="logo col-12 col-lg-1">
+                    </a>
                     <div class="pt-4 col-12 col-lg-7">
                         <p><i class="fa-solid fa-store"></i> : Algún lugar de Viña del Mar, Local 3</p>
                         <p><i class="fa-solid fa-phone"></i> : +56 9 8765 4321 </p>
@@ -767,6 +769,10 @@
                         <a href="https://www.facebook.com" target="_blank"><i class="fa-brands fa-facebook"></i></a>
                     </div>
                 </div>
+            </div>
+            <hr>
+            <div class="text-center">
+                Desarrollado por: <a href="https://github.com/JavierGodoyf/" target="_blank">Javier Godoy Fernandez</a>
             </div>
         </footer>
     </div>
