--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <script src="https://kit.fontawesome.com/f836eb7316.js" crossorigin="anonymous"></script>
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
 </head>
+
 <body class="container-fluid d-flex flex-column justify-content-between">
     <script>
         AOS.init();
@@ -65,18 +66,21 @@
             <div class="row">
                 <div data-aos="fade-up" data-aos-anchor-placement="top-bottom" data-aos-duration="1000"
                     data-aos-once=true class="col-12 col-lg-6 my-lg-5">
-                    <h1>¡Ven a vivir la experiencia Cat Café en Miau Café!</h1>
-                    <p>¡Bienvenidos al lugar donde los amantes de los felinos encuentran su paraíso! En nuestro Miau
-                        Café, te invitamos a sumergirte en un mundo de suavidad, ronroneos y pura diversión.</p>
-                    <p> Imagina
-                        relajarte con una taza de tu café o té favorito mientras disfrutas de la compañía de nuestros
-                        encantadores gatos, todos ansiosos por compartir su cariño contigo. Nuestro ambiente acogedor y
+                    <h1>¡Ven a vivir la experiencia <span class="texto-terciario">Cat Café en Miau Café</span>!</h1>
+                    <p>¡Bienvenidos al lugar donde los amantes de los felinos encuentran su paraíso! En nuestro <span
+                            class="texto-terciario">Miau Café</span>,
+                        te invitamos a sumergirte en un mundo de suavidad, ronroneos y pura diversión.</p>
+                    <p> Imagina relajarte con una taza de tu café o té favorito mientras disfrutas de la compañía de
+                        nuestros
+                        encantadores <span class="texto-terciario">gatos</span>, todos ansiosos por compartir su cariño
+                        contigo. Nuestro ambiente acogedor y
                         relajado te permite escapar del estrés diario y disfrutar de la terapia felina definitiva.</p>
 
-                    <p>Ven a vivir una experiencia única en Miau Café, donde la ternura y la diversión se encuentran en
-                        cada
+                    <p>Ven a vivir una experiencia única en <span class="texto-terciario">Miau Café</span>, donde la
+                        ternura y la diversión se encuentran en cada
                         rincón. ¿Estás listo para consentir a tu alma gatuna?</p>
                 </div>
+
                 <div data-aos="zoom-in" data-aos-anchor-placement="top-center" data-aos-duration="1000"
                     data-aos-once=true class="col-12 col-lg-6 mt-5">
                     <img src="./assets/img/gatos_ventana.jpg" alt="Gatos en una ventana" class="img-fluid rounded-pill">
@@ -86,17 +90,27 @@
         <div class="container my-5">
             <div class="row">
                 <div data-aos="fade-up" data-aos-anchor-placement="top-bottom" data-aos-duration="1000"
-                    data-aos-once=true class="col-12 col-lg-6 mb-5 order-lg-last">
-                    <h2>¡Nuestros michis te esperan!</h2>
-                    <p>Nuestros adorables mininos de Miau Café están ansiosos por conocerte. En "Nuestros Michis te
-                        Esperan", te presentamos a nuestra traviesa pandilla de gatos, cada uno con su personalidad
-                        única y encanto felino.</p>
-                    <p>Desde los juguetones gatitos que siempre están listos para una partida de caza hasta los gatos
-                        más relajados que disfrutan de una siesta tranquila en algún rincón acogedor, hay un mundo
+                    data-aos-once=true class="col-12 mt-3 mb-5 col-lg-6 order-lg-last mt-lg-0 pt-lg-5">
+                    <h2>¡<span class="texto-terciario">Nuestros michis</span> te esperan!</h2>
+                    <p>Nuestros adorables <span class="texto-terciario">mininos</span> de <span
+                            class="texto-terciario">Miau Café</span>
+                        están ansiosos por conocerte. En "Nuestros Michis te Esperan", te presentamos a nuestra traviesa
+                        pandilla de
+                        gatos, cada uno con su <span class="texto-terciario">personalidad</span> única y encanto felino.
+                    </p>
+                    <p>Desde los juguetones <span class="texto-terciario">gatitos</span> que siempre están listos para
+                        una partida de
+                        caza hasta los gatos más relajados que disfrutan de una siesta tranquila en algún rincón
+                        acogedor, hay un mundo
                         entero de diversión y amor por descubrir.</p>
-                    <p>¿Quieres aprender más sobre nuestras mascotas de cuatro patas y sus historias en Miau Café?
-                        ¡Explora sus perfiles y descubre por qué cada uno de ellos es tan especial! Ven y conoce a
-                        los protagonistas de Miau Café y déjate cautivar por su magia peluda.</p>
+                    <p>¿Quieres aprender más sobre nuestras <span class="texto-terciario">mascotas</span> de cuatro
+                        patas y sus <span class="texto-terciario">historias</span> en <span class="texto-terciario">Miau
+                            Café</span>? ¡Explora sus
+                        perfiles y descubre por qué cada uno de ellos es tan especial! Ven y conoce a los protagonistas
+                        de <span class="texto-terciario">Miau Café</span> y déjate cautivar por su magia peluda.
+                        <a href="./pages/michis.html" class="texto-terciario">Descubre más sobre nuestros michis
+                            aquí</a>.
+                    </p>
                 </div>
                 <div data-aos="zoom-in" data-aos-anchor-placement="top-center" data-aos-duration="1000"
                     data-aos-once=true class="col-12 col-lg-6  order-lg-first">
@@ -107,11 +121,12 @@
         </div>
     </main>
     <div class="animaciones">
-        <footer data-aos="fade-up" data-aos-duration="1000" data-aos-once=true class="container-fluid  ">
+        <footer data-aos="fade-up" data-aos-duration="1000" data-aos-once=true class="container-fluid">
             <div class="row">
-                <div class="d-flex justify-content-between px-3 flex-wrap mx-auto ">
-                    <img src="./assets/img/logo_cat_cafe.png" alt="Logo Miau Café"
-                        class="logo logofoot col-12 col-lg-1 mx-auto">
+                <div class="d-flex justify-content-between px-3 flex-wrap mx-auto">
+                    <a href="./index.html" class="logofoot ">
+                        <img src="./assets/img/logo_cat_cafe.png" alt="Logo Miau Café" class="logo col-12 col-lg-1">
+                    </a>
                     <div class="pt-4 col-12 col-lg-7">
                         <p><i class="fa-solid fa-store"></i> : Algún lugar de Viña del Mar, Local 3</p>
                         <p><i class="fa-solid fa-phone"></i> : +56 9 8765 4321 </p>
@@ -123,6 +138,10 @@
                         <a href="https://www.facebook.com" target="_blank"><i class="fa-brands fa-facebook"></i></a>
                     </div>
                 </div>
+            </div>
+            <hr>
+            <div class="text-center">
+                Desarrollado por: <a href="https://github.com/JavierGodoyf/" target="_blank">Javier Godoy Fernandez</a>
             </div>
         </footer>
     </div>
