--- a/pages/acerca.html
+++ b/pages/acerca.html
@@ -29,7 +29,7 @@
                 <p>Un café para ronronear</p>
             </div>
         </a>
-        
+
     </header>
     <nav class="navbar navbar-expand-lg navbar-light bg-brown sticky-top">
         <div class="container">
@@ -59,36 +59,57 @@
         </div>
     </nav>
     <main>
-        <section class="container my-2">
+        <section class="container my-2 mb-4">
             <div class="row animaciones">
-                <div data-aos="fade-center" class="col-12 col-lg-6 ">
-                    <h1 class="text-center mt-5 mb-3">Acerca</h1>
-                    <p>La historia de Miau Café comenzó con la visión de crear un espacio donde los amantes de
-                        los gatos pudieran disfrutar de la compañía de estos encantadores felinos mientras
-                        saborean una taza de café o té. Fundada por un grupo de apasionados dueños de gatos,
-                        nuestra cafetería es el hogar permanente de una pandilla de gatos consentidos que forman
-                        parte integral de nuestra familia y, por supuesto, de la experiencia que ofrecemos a
-                        nuestros visitantes.</p>
-                    <p>En Miau Café, nos enorgullece brindar un entorno seguro y acogedor para nuestros gatos,
-                        garantizando que vivan vidas felices y saludables. Cada uno de ellos tiene su propia
-                        historia y personalidad única, lo que agrega un toque especial a la atmósfera de nuestra
-                        cafetería. Ven y únete a nuestra historia, donde la pasión por los gatos y la pasión por
-                        el café se unen para crear un lugar mágico donde el amor felino es una constante.
-                        ¡Bienvenido a Miau Café, donde nuestros gatos son parte.</p>
+                <div data-aos="fade-center" class="col-12 col-lg-6 mb-4 ">
+                    <h1 class="text-center mt-5 mb-3">Nuestra Historia</h1>
+                    <p>La historia de <span class="texto-terciario">Miau Café</span> se teje con hilos de curiosidad,
+                        travesuras
+                        y ronroneos suaves. Desde sus comienzos, nuestra cafetería ha sido el refugio donde los amantes
+                        de los gatos
+                        pueden deleitarse con la compañía de encantadores felinos mientras saborean una taza de café o
+                        té. Fundada
+                        por un grupo de apasionados dueños de <span class="texto-terciario">gatos</span>, <span
+                            class="texto-terciario">Miau Café</span> es el hogar permanente de una pandilla de <span
+                            class="texto-terciario">gatos</span> consentidos que aportan su chispa única a nuestra
+                        familia y, por
+                        supuesto, a la experiencia que ofrecemos a nuestros visitantes.</p>
+                    <p>En <span class="texto-terciario">Miau Café</span>, nos enorgullece brindar un entorno seguro y
+                        acogedor para
+                        nuestros <span class="texto-terciario">gatos</span>, asegurándonos de que vivan vidas felices y
+                        saludables.
+                        Cada uno de ellos, con su cola en alto y ojos curiosos, tiene su propia <span
+                            class="texto-terciario">historia</span> y personalidad única, tejiendo juntos la maravillosa
+                        atmósfera de
+                        nuestra cafetería. Ven y sumérgete en nuestra <span class="texto-terciario">historia</span>
+                        felina, donde la
+                        pasión por los <span class="texto-terciario">gatos</span> y la magia del café se entrelazan para
+                        crear un
+                        lugar mágico donde el amor felino es la melodía constante. ¡Bienvenido a <span
+                            class="texto-terciario">Miau
+                            Café</span>, donde nuestros <span class="texto-terciario">gatos</span> son verdaderos
+                        protagonistas!</p>
                 </div>
+
+
                 <div data-aos="zoom-in" class="col-12 col-lg-6">
                     <img src="../assets/img/logo_cat_cafe.png" alt="Logo Miau Café" class="img-fluid">
                 </div>
             </div>
-            <iframe width="100%" height="600" src="https://www.youtube-nocookie.com/embed/KmeSy7FPdCA?si=DTGgnZE3RS-cKz4u" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen data-aos="fade-up" data-aos-duration="1000" data-aos-once=true class="bordes"></iframe>
+            <iframe width="100%" height="600"
+                src="https://www.youtube-nocookie.com/embed/KmeSy7FPdCA?si=DTGgnZE3RS-cKz4u"
+                title="YouTube video player"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                allowfullscreen data-aos="fade-up" data-aos-duration="1000" data-aos-once=true class="bordes"></iframe>
         </section>
     </main>
     <div class="animaciones">
-        <footer data-aos="fade-up" data-aos-duration="1000" data-aos-once=true class="container-fluid ">
+        <footer data-aos="fade-up" data-aos-duration="1000" data-aos-once=true class="container-fluid">
             <div class="row">
-                <div class="d-flex justify-content-between px-3 flex-wrap mx-auto ">
-                    <img src="../assets/img/logo_cat_cafe.png" alt="Logo Miau Café"
-                        class="logo logofoot col-12 col-lg-1 mx-auto">
+                <div class="d-flex justify-content-between px-3 flex-wrap mx-auto">
+                    <a href="../index.html" class="logofoot ">
+                        <img src="../assets/img/logo_cat_cafe.png" alt="Logo Miau Café" class="logo col-12 col-lg-1">
+                    </a>
                     <div class="pt-4 col-12 col-lg-7">
                         <p><i class="fa-solid fa-store"></i> : Algún lugar de Viña del Mar, Local 3</p>
                         <p><i class="fa-solid fa-phone"></i> : +56 9 8765 4321 </p>
@@ -100,6 +121,10 @@
                         <a href="https://www.facebook.com" target="_blank"><i class="fa-brands fa-facebook"></i></a>
                     </div>
                 </div>
+            </div>
+            <hr>
+            <div class="text-center">
+                Desarrollado por: <a href="https://github.com/JavierGodoyf/" target="_blank">Javier Godoy Fernandez</a>
             </div>
         </footer>
     </div>
