--- a/pages/galeria.html
+++ b/pages/galeria.html
@@ -60,41 +60,53 @@
         </div>
     </nav>
     <main class="mt-2">
-        <div class="container my-5">
+        <div class="container my-5" data-aos="fade" data-aos-anchor-placement="top-bottom" data-aos-duration="1000"
+            data-aos-once=true>
             <h1 class="text-center">Galería</h1>
-            <p>En Miau Café, creemos en cautivar todos tus sentidos, y la vista es uno de los más importantes. Te
-                invitamos a explorar nuestra vibrante galería de imágenes que capturan la esencia de la felicidad gatuna
+            <p>En <span class="texto-terciario">Miau Café</span>, creemos en cautivar todos tus sentidos, y la vista es
+                uno de los más importantes. Te
+                invitamos a explorar nuestra vibrante <span class="texto-terciario">galería de imágenes</span> que
+                capturan la esencia de la felicidad gatuna
                 y la exquisitez de nuestras bebidas y alimentos.</p>
 
-            <p>Desde gatos que derrochan amor hasta tazas de café humeante y bocados tentadores, nuestra galería te
+            <p>Desde <span class="texto-terciario">gatos</span> que derrochan amor hasta tazas de café humeante y
+                bocados tentadores, nuestra galería te
                 sumergirá en un mundo de emociones y sabores. Desplázate a través de nuestras fotos y deja que la
-                belleza y la alegría de Miau Café te inspiren a planificar tu próxima visita. ¡Prepárate para un
+                belleza y la alegría de <span class="texto-terciario">Miau Café</span> te inspiren a planificar tu
+                próxima visita. ¡Prepárate para un
                 recorrido visual que te hará ronronear de placer!</p>
         </div>
-        <div class="d-flex flex-wrap justify-content-center">
-            <img src="../assets/img/carta1.jpg" class="col-12 col-lg-3 rounded-3 m-3" data-aos="flip-right"
-                data-aos-once=true data-aos-anchor-placement="bottom" data-aos-delay="0" alt="Capuccino ">
-            <img src="../assets/img/carta2.jpg" class="col-12 col-lg-3 rounded-3 m-3" data-aos="flip-down"
-                data-aos-once=true data-aos-anchor-placement="bottom" data-aos-delay="100" alt="Té canela y limon">
-            <img src="../assets/img/carta3.jpg" class="col-12 col-lg-3 rounded-3 m-3" data-aos="flip-left"
-                data-aos-once=true data-aos-anchor-placement="bottom" data-aos-delay="200"
-                alt="Hotcakes de Nutella fresa">
-            <img src="../assets/img/carta4.jpg" class="col-12 col-lg-3 rounded-3 m-3" data-aos="flip-right"
-                data-aos-once=true data-aos-anchor-placement="bottom" data-aos-delay="300"
-                alt="Sandwich de huevo tocino">
-            <img src="../assets/img/carta5.jpg" class="col-12 col-lg-3 rounded-3 m-3" data-aos="flip-up"
-                data-aos-once=true data-aos-anchor-placement="bottom" data-aos-delay="400"
-                alt="Sandwich de palta y huevo">
-            <img src="../assets/img/carta6.jpg" class="col-12 col-lg-3 rounded-3 m-3" data-aos="flip-left"
-                data-aos-once=true data-aos-anchor-placement="bottom" data-aos-delay="500" alt="Pastel de Zanahoria">
+
+        <div class="d-flex flex-wrap justify-content-center" data-aos="fade-up" data-aos-duration="1000"
+            data-aos-once="true" data-aos-anchor-placement="bottom">
+            <div class="img-container col-12 col-lg-3 m-3">
+                <img src="../assets/img/carta1.jpg" class="imgGal rounded-3" alt="Capuccino">
+            </div>
+            <div class="img-container col-12 col-lg-3 m-3">
+                <img src="../assets/img/carta2.jpg" class="imgGal rounded-3" alt="Té canela y limón">
+            </div>
+            <div class="img-container col-12 col-lg-3 m-3">
+                <img src="../assets/img/carta3.jpg" class="imgGal rounded-3" alt="Hotcakes de Nutella fresa">
+            </div>
+            <div class="img-container col-12 col-lg-3 m-3">
+                <img src="../assets/img/carta4.jpg" class="imgGal rounded-3" alt="Sandwich de huevo tocino">
+            </div>
+            <div class="img-container col-12 col-lg-3 m-3">
+                <img src="../assets/img/carta5.jpg" class="imgGal rounded-3" alt="Sandwich de palta y huevo">
+            </div>
+            <div class="img-container col-12 col-lg-3 m-3">
+                <img src="../assets/img/carta6.jpg" class="imgGal rounded-3" alt="Pastel de Zanahoria">
+            </div>
         </div>
+
     </main>
     <div class="animaciones">
-        <footer data-aos="fade-up" data-aos-duration="1000" data-aos-once=true class="container-fluid ">
+        <footer data-aos="fade-up" data-aos-duration="1000" data-aos-once=true class="container-fluid">
             <div class="row">
-                <div class="d-flex justify-content-between px-3 flex-wrap mx-auto ">
-                    <img src="../assets/img/logo_cat_cafe.png" alt="Logo Miau Café"
-                        class="logo logofoot col-12 col-lg-1 mx-auto">
+                <div class="d-flex justify-content-between px-3 flex-wrap mx-auto">
+                    <a href="../index.html" class="logofoot ">
+                        <img src="../assets/img/logo_cat_cafe.png" alt="Logo Miau Café" class="logo col-12 col-lg-1">
+                    </a>
                     <div class="pt-4 col-12 col-lg-7">
                         <p><i class="fa-solid fa-store"></i> : Algún lugar de Viña del Mar, Local 3</p>
                         <p><i class="fa-solid fa-phone"></i> : +56 9 8765 4321 </p>
@@ -106,6 +118,10 @@
                         <a href="https://www.facebook.com" target="_blank"><i class="fa-brands fa-facebook"></i></a>
                     </div>
                 </div>
+            </div>
+            <hr>
+            <div class="text-center">
+                Desarrollado por: <a href="https://github.com/JavierGodoyf/" target="_blank">Javier Godoy Fernandez</a>
             </div>
         </footer>
     </div>
