--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -15,6 +16,7 @@
     <script src="https://kit.fontawesome.com/f836eb7316.js" crossorigin="anonymous"></script>
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
 </head>
+
 <body class="container-fluid d-flex flex-column justify-content-between">
     <script>
         AOS.init();
@@ -27,7 +29,7 @@
                 <p>Un café para ronronear</p>
             </div>
         </a>
-            
+
     </header>
     <nav class="navbar navbar-expand-lg navbar-light bg-brown sticky-top">
         <div class="container">
@@ -60,12 +62,15 @@
         <section>
             <div class="container my-5">
                 <h1 class="text-center">¡Déjanos tus comentarios!</h1>
-                <p>¿Tienes preguntas, comentarios o simplemente quieres saludar a nuestros adorables gatos? Estamos
-                    encantados de escucharte. En Miau Café, valoramos tu retroalimentación y estamos aquí para ayudarte
-                    en
+                <p>¿Tienes preguntas, comentarios o simplemente quieres saludar a nuestros adorables <span
+                        class="texto-terciario">gatos</span>? Estamos encantados de escucharte. En <span
+                        class="texto-terciario">Miau Café</span>, valoramos tu retroalimentación y estamos aquí para
+                    ayudarte en
                     lo que necesites. No dudes en contactarnos a través de los siguientes medios. Estamos ansiosos por
-                    recibir tus mensajes y conocerte mejor. ¡Hablemos!</p>
+                    recibir
+                    tus mensajes y conocerte mejor. ¡Hablemos!</p>
             </div>
+
             <div class="container">
                 <div class="row justify-content-center">
                     <div class="col-md-8">
@@ -74,33 +79,34 @@
                                 <div class="col-md-6">
                                     <div class="mb-3">
                                         <label for="nombre" class="form-label">Nombre*</label>
-                                        <input type="text" class="form-control" id="nombre"
+                                        <input type="text" class="form-control rounded-pill" id="nombre"
                                             placeholder="Ingrese su Nombre" required>
                                     </div>
                                 </div>
                                 <div class="col-md-6">
                                     <div class="mb-3">
-                                        <label for="apellido" class="form-label">Apellido*</label>
-                                        <input type="text" class="form-control" id="apellido"
+                                        <label for="apellido" class="form-label ">Apellido*</label>
+                                        <input type="text" class="form-control rounded-pill" id="apellido"
                                             placeholder="Ingrese su Apellido" required>
                                     </div>
                                 </div>
                             </div>
                             <div class="mb-3">
-                                <label for="email" class="form-label">Email*</label>
-                                <input type="email" class="form-control" id="email" placeholder="ejemplo@servidor.com"
-                                    required>
+                                <label for="email" class="form-label ">Email*</label>
+                                <input type="email" class="form-control rounded-pill" id="email"
+                                    placeholder="ejemplo@servidor.com" required>
                             </div>
                             <div class="mb-3">
-                                <label for="comentario" class="form-label">Comentario</label>
-                                <textarea class="form-control" id="comentario" rows="5"
+                                <label for="comentario" class="form-label ">Comentario</label>
+                                <textarea class="form-control bordes" id="comentario" rows="5"
                                     placeholder="Ingrese su comentario"></textarea>
                             </div>
                             <label class="mb-4"><input type="checkbox" /> ¡Suscríbete a nuestro boletín de noticias!
                             </label>
                             <div class="text-center">
-                                <button type="reset" class="btn btn-alt">Limpiar Formulario</button>
-                                <button type="submit" class="btn btn-color" formaction="./404.html">Enviar
+                                <button type="reset" class="btn btn-alt mx-3 rounded-pill">Limpiar Formulario</button>
+                                <button type="submit" class="btn btn-color mx-3 rounded-pill"
+                                    formaction="./404.html">Enviar
                                     Formulario</button>
                             </div>
                         </form>
@@ -111,11 +117,11 @@
         <section class="animaciones">
             <div class="container my-5" data-aos="fade-up" data-aos-duration="500" data-aos-once=true>
                 <h2 class="text-center">¡Ven a visitarnos!</h2>
-                <p>¡Te invitamos a visitarnos en nuestro acogedor rincón de gatos en Viña del Mar! Estamos ubicados en
-                    una
-                    de las zonas más encantadoras de la ciudad, donde podrás disfrutar de la brisa marina y, por
-                    supuesto,
-                    de la compañía de nuestros gatos.</p>
+                <p>¡Te invitamos a visitarnos en nuestro acogedor rincón de <span class="texto-terciario">gatos</span>
+                    en <span class="texto-terciario">Viña del Mar</span>! Estamos ubicados en una de las zonas más
+                    encantadoras de la
+                    ciudad, donde podrás disfrutar de la brisa marina y, por supuesto, de la compañía de nuestros <span
+                        class="texto-terciario">gatos</span>.</p>
             </div>
             <div>
                 <iframe
@@ -128,12 +134,12 @@
         </section>
     </main>
     <div class="animaciones">
-        <footer data-aos="fade-up" data-aos-duration="1000" data-aos-once=true data-aos-anchor-placement="bottom"
-            class="container-fluid ">
+        <footer data-aos="fade-up" data-aos-duration="1000" data-aos-once=true class="container-fluid">
             <div class="row">
-                <div class="d-flex justify-content-between px-3 flex-wrap mx-auto ">
-                    <img src="../assets/img/logo_cat_cafe.png" alt="Logo Miau Café"
-                        class="logo logofoot col-12 col-lg-1 mx-auto">
+                <div class="d-flex justify-content-between px-3 flex-wrap mx-auto">
+                    <a href="../index.html" class="logofoot ">
+                        <img src="../assets/img/logo_cat_cafe.png" alt="Logo Miau Café" class="logo col-12 col-lg-1">
+                    </a>
                     <div class="pt-4 col-12 col-lg-7">
                         <p><i class="fa-solid fa-store"></i> : Algún lugar de Viña del Mar, Local 3</p>
                         <p><i class="fa-solid fa-phone"></i> : +56 9 8765 4321 </p>
@@ -146,8 +152,13 @@
                     </div>
                 </div>
             </div>
+            <hr>
+            <div class="text-center">
+                Desarrollado por: <a href="https://github.com/JavierGodoyf/" target="_blank">Javier Godoy Fernandez</a>
+            </div>
         </footer>
     </div>
     <script src="../js/bootstrap.bundle.min.js"></script>
 </body>
+
 </html>
