--- a/pages/michis.html
+++ b/pages/michis.html
@@ -29,7 +29,7 @@
                 <p>Un café para ronronear</p>
             </div>
         </a>
-       
+
     </header>
     <nav class="navbar navbar-expand-lg navbar-light bg-brown sticky-top">
         <div class="container">
@@ -60,72 +60,83 @@
     </nav>
     <main class="mt-2">
         <div class="container my-5">
-            <h1 class="text-center mb-3">Conoce a nuestros michis!</h1>
-            <p>Bienvenidos a la sección más encantadora de Miau Café, donde te presentamos a los protagonistas de
-                nuestra historia, nuestros amados mininos.</p>
+            <h1 class="text-center mb-3">¡Conoce a nuestros <span class="texto-terciario">michis</span>!</h1>
+            <p>Bienvenidos a la sección más encantadora de <span class="texto-terciario">Miau Café</span>, donde te
+                presentamos a los protagonistas de
+                nuestra historia, nuestros amados <span class="texto-terciario">mininos</span>.</p>
 
-            <p>En "Nuestros Michis", te invitamos a conocer a cada uno de nuestros gatos, descubriendo sus
+            <p>En "<span class="texto-terciario">Nuestros Michis</span>", te invitamos a conocer a cada uno de nuestros
+                <span class="texto-terciario">gatos</span>, descubriendo sus
                 personalidades únicas, historias de vida y por qué se han convertido en parte esencial de la magia de
-                Miau Café. Desde los gatos juguetones hasta los más relajados, te ofrecemos un vistazo exclusivo a las
+                <span class="texto-terciario">Miau Café</span>. Desde los <span class="texto-terciario">gatos</span>
+                juguetones hasta los más relajados, te ofrecemos un vistazo exclusivo a las
                 estrellas peludas que alegran nuestro espacio y que te esperan con cariño. Acompáñanos en este paseo por
-                el mundo felino de Miau Café, donde cada gato tiene su propia historia que contar.</p>
-
+                el mundo felino de <span class="texto-terciario">Miau Café</span>, donde cada <span
+                    class="texto-terciario">gato</span> tiene su propia historia que contar.
+            </p>
         </div>
+
         <section class="container my-5 ">
             <div class="row d-flex justify-content-around animaciones">
                 <div class="card-michi mt-3" data-aos="fade-down" data-aos-duration="500" data-aos-once=true>
-                    <img src="../assets/img/hecate.jpg" class="card-img-top pt-3 rounded-5 "
+                    <img src="../assets/img/hecate.jpg" class="card-img-top pt-3 bordes "
                         alt="Hécate una gata tricolor">
                     <div class="card-body">
                         <h2 class="text-center">Hécate</h2>
                         <p>Hecate es una gata tricolor muy cariñosa y juguetona que roba corazones en Miau Café. Con su
-                        actitud
-                        juguetona y su amor por la diversión, Hecate es la compañía perfecta para aquellos que buscan
-                        una
-                        interacción llena de alegría y vitalidad.</p>
+                            actitud
+                            juguetona y su amor por la diversión, Hecate es la compañía perfecta para aquellos que
+                            buscan
+                            una
+                            interacción llena de alegría y vitalidad.</p>
                     </div>
                 </div>
                 <div class="card-michi mt-3" data-aos="fade-down" data-aos-duration="500" data-aos-once=true>
-                    <img src="../assets/img/amy.jpg" class="card-img-top pt-3 rounded-5 "
-                        alt="Amy una gata de pelo largo">
+                    <img src="../assets/img/amy.jpg" class="card-img-top pt-3 bordes " alt="Amy una gata de pelo largo">
                     <div class="card-body">
                         <h2 class="text-center">Amy</h2>
-                        <p>Amy es una gata de pelo largo blanco con naranja que destaca por su maullido fino y encantador.
-                        Su elegancia y su personalidad cariñosa hacen que sea un miembro querido en Miau Café. Amy es la
-                        compañía perfecta para aquellos que buscan la dulzura de una gata de pelo largo y un maullido
-                        que te hará sonreír.</p>
+                        <p>Amy es una gata de pelo largo blanco con naranja que destaca por su maullido fino y
+                            encantador.
+                            Su elegancia y su personalidad cariñosa hacen que sea un miembro querido en Miau Café. Amy
+                            es la
+                            compañía perfecta para aquellos que buscan la dulzura de una gata de pelo largo y un
+                            maullido
+                            que te hará sonreír.</p>
                     </div>
                 </div>
                 <div class="card-michi mt-3" data-aos="fade-down" data-aos-duration="500" data-aos-once=true>
-                    <img src="../assets/img/Rory.jpg" class="card-img-top pt-3 rounded-5 "
-                        alt="Rory un gato de pelo gris">
+                    <img src="../assets/img/Rory.jpg" class="card-img-top pt-3 bordes " alt="Rory un gato de pelo gris">
                     <div class="card-body">
                         <h2 class="text-center">Rory</h2>
-                        <p>Rory es un gato gris que, en un principio, puede parecer arisco, pero cuando toma confianza, se
-                        convierte en un verdadero amor. Con su actitud reservada y su capacidad para sorprenderte con su
-                        cariño, Rory es el compañero perfecto para aquellos que buscan una conexión única con nuestros
-                        gatos.</p>
+                        <p>Rory es un gato gris que, en un principio, puede parecer arisco, pero cuando toma confianza,
+                            se
+                            convierte en un verdadero amor. Con su actitud reservada y su capacidad para sorprenderte
+                            con su
+                            cariño, Rory es el compañero perfecto para aquellos que buscan una conexión única con
+                            nuestros
+                            gatos.</p>
                     </div>
                 </div>
                 <div class="card-michi mt-3" data-aos="fade-down" data-aos-duration="500" data-aos-once=true>
-                    <img src="../assets/img/prompto.jpg" class="card-img-top pt-3 rounded-5 "
+                    <img src="../assets/img/prompto.jpg" class="card-img-top pt-3 bordes"
                         alt="Prompto el gato hermano de Amy pero con pelo corto">
                     <div class="card-body">
                         <h2 class="text-center">Prompto</h2>
                         <p>Prompto es el hermano de Amy y comparte sus mismos colores, pero con el pelo corto y una
-                        personalidad muy gato naranja. Con su actitud juguetona y traviesa, Prompto es un auténtico
-                        torbellino de diversión y vitalidad que hará que tu visita a Miau Café sea inolvidable.</p>
+                            personalidad muy gato naranja. Con su actitud juguetona y traviesa, Prompto es un auténtico
+                            torbellino de diversión y vitalidad que hará que tu visita a Miau Café sea inolvidable.</p>
                     </div>
                 </div>
             </div>
         </section>
     </main>
     <div class="animaciones">
-        <footer data-aos="fade-up" data-aos-duration="1000" data-aos-once=true class="container-fluid ">
+        <footer data-aos="fade-up" data-aos-duration="1000" data-aos-once=true class="container-fluid">
             <div class="row">
-                <div class="d-flex justify-content-between px-3 flex-wrap mx-auto ">
-                    <img src="../assets/img/logo_cat_cafe.png" alt="Logo Miau Café"
-                        class="logo logofoot col-12 col-lg-1 mx-auto">
+                <div class="d-flex justify-content-between px-3 flex-wrap mx-auto">
+                    <a href="../index.html" class="logofoot ">
+                        <img src="../assets/img/logo_cat_cafe.png" alt="Logo Miau Café" class="logo col-12 col-lg-1">
+                    </a>
                     <div class="pt-4 col-12 col-lg-7">
                         <p><i class="fa-solid fa-store"></i> : Algún lugar de Viña del Mar, Local 3</p>
                         <p><i class="fa-solid fa-phone"></i> : +56 9 8765 4321 </p>
@@ -137,6 +148,10 @@
                         <a href="https://www.facebook.com" target="_blank"><i class="fa-brands fa-facebook"></i></a>
                     </div>
                 </div>
+            </div>
+            <hr>
+            <div class="text-center">
+                Desarrollado por: <a href="https://github.com/JavierGodoyf/" target="_blank">Javier Godoy Fernandez</a>
             </div>
         </footer>
     </div>
