--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -103,9 +103,10 @@
                             </div>
                             <label class="mb-4"><input type="checkbox" /> ¡Suscríbete a nuestro boletín de noticias!
                             </label>
-                            <div class="text-center">
-                                <button type="reset" class="btn btn-alt mx-3 rounded-pill">Limpiar Formulario</button>
-                                <button type="submit" class="btn btn-color mx-3 rounded-pill"
+                            <div class="text-center mt-3">
+                                <button type="reset" class="btn btn-alt mx-lg-3 rounded-pill">Limpiar
+                                    Formulario</button>
+                                <button type="submit" class="btn btn-color mx-lg-3 rounded-pill"
                                     formaction="./404.html">Enviar
                                     Formulario</button>
                             </div>
