ultimos detalles y comentarios

--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
             </div>
         </a>
     </header>
+    <!--Deje la etiqueta nav afuera para que el logo del header saliera fuera de pantalla y el navegador este siempre visible-->
     <nav class="navbar navbar-expand-lg navbar-light bg-brown sticky-top">
         <div class="container">
             <button class="navbar-toggler my-2" type="button" data-bs-toggle="collapse"
@@ -75,12 +76,10 @@
                         encantadores <span class="texto-terciario">gatos</span>, todos ansiosos por compartir su cariño
                         contigo. Nuestro ambiente acogedor y
                         relajado te permite escapar del estrés diario y disfrutar de la terapia felina definitiva.</p>
-
                     <p>Ven a vivir una experiencia única en <span class="texto-terciario">Miau Café</span>, donde la
                         ternura y la diversión se encuentran en cada
                         rincón. ¿Estás listo para consentir a tu alma gatuna?</p>
                 </div>
-
                 <div data-aos="zoom-in" data-aos-anchor-placement="top-center" data-aos-duration="1000"
                     data-aos-once=true class="col-12 col-lg-6 mt-5">
                     <img src="./assets/img/gatos_ventana.jpg" alt="Gatos en una ventana" class="img-fluid rounded-pill">
