--- a/pages/michis.html
+++ b/pages/michis.html
@@ -29,8 +29,8 @@
                 <p>Un café para ronronear</p>
             </div>
         </a>
-
     </header>
+    <!--Deje la etiqueta nav afuera para que el logo del header saliera fuera de pantalla y el navegador este siempre visible-->
     <nav class="navbar navbar-expand-lg navbar-light bg-brown sticky-top">
         <div class="container">
             <button class="navbar-toggler my-2" type="button" data-bs-toggle="collapse"
@@ -64,7 +64,6 @@
             <p>Bienvenidos a la sección más encantadora de <span class="texto-terciario">Miau Café</span>, donde te
                 presentamos a los protagonistas de
                 nuestra historia, nuestros amados <span class="texto-terciario">mininos</span>.</p>
-
             <p>En "<span class="texto-terciario">Nuestros Michis</span>", te invitamos a conocer a cada uno de nuestros
                 <span class="texto-terciario">gatos</span>, descubriendo sus
                 personalidades únicas, historias de vida y por qué se han convertido en parte esencial de la magia de
@@ -75,7 +74,6 @@
                     class="texto-terciario">gato</span> tiene su propia historia que contar.
             </p>
         </div>
-
         <section class="container my-5 ">
             <div class="row d-flex justify-content-around animaciones">
                 <div class="card-michi mt-3" data-aos="fade-down" data-aos-duration="500" data-aos-once=true>
