--- a/404.html
+++ b/404.html
@@ -30,8 +30,8 @@
                 <p>Un café para ronronear</p>
             </div>
         </a>
-
     </header>
+    <!--Deje la etiqueta nav afuera para que el logo del header saliera fuera de pantalla y el navegador este siempre visible-->
     <nav class="navbar navbar-expand-lg navbar-light bg-brown sticky-top py-2">
         <div class="container">
             <button class="navbar-toggler my-2" type="button" data-bs-toggle="collapse"
@@ -69,6 +69,7 @@
                     <p><a href="./index.html">¡Volver a la Purrincipio!</a></p>
                 </div>
                 <div class="col-12 col-lg-6 mb-3 order-lg-first">
+                    <!--animacion y vectores hechos en freepik-->
                     <svg class="animated" id="freepik_stories-playful-cat" xmlns="http://www.w3.org/2000/svg"
                         viewBox="0 0 500 500" version="1.1" xmlns:xlink="http://www.w3.org/1999/xlink"
                         xmlns:svgjs="http://svgjs.com/svgjs">
@@ -750,6 +751,7 @@
                 </div>
             </div>
         </div>
+        <!--Fin animacion y vectores hechos en freepik-->
     </main>
     <div class="animaciones">
         <footer data-aos="fade-up" data-aos-duration="1000" data-aos-once=true class="container-fluid">
