--- a/pages/acerca.html
+++ b/pages/acerca.html
@@ -29,8 +29,8 @@
                 <p>Un café para ronronear</p>
             </div>
         </a>
-
     </header>
+    <!--Deje la etiqueta nav afuera para que el logo del header saliera fuera de pantalla y el navegador este siempre visible-->
     <nav class="navbar navbar-expand-lg navbar-light bg-brown sticky-top">
         <div class="container">
             <button class="navbar-toggler my-2" type="button" data-bs-toggle="collapse"
@@ -90,8 +90,6 @@
                             Café</span>, donde nuestros <span class="texto-terciario">gatos</span> son verdaderos
                         protagonistas!</p>
                 </div>
-
-
                 <div data-aos="zoom-in" class="col-12 col-lg-6">
                     <img src="../assets/img/logo_cat_cafe.png" alt="Logo Miau Café" class="img-fluid">
                 </div>
