--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -29,8 +29,8 @@
                 <p>Un café para ronronear</p>
             </div>
         </a>
-
     </header>
+    <!--Deje la etiqueta nav afuera para que el logo del header saliera fuera de pantalla y el navegador este siempre visible-->
     <nav class="navbar navbar-expand-lg navbar-light bg-brown sticky-top">
         <div class="container">
             <button class="navbar-toggler my-2" type="button" data-bs-toggle="collapse"
@@ -70,7 +70,6 @@
                     recibir
                     tus mensajes y conocerte mejor. ¡Hablemos!</p>
             </div>
-
             <div class="container">
                 <div class="row justify-content-center">
                     <div class="col-md-8">
