--- a/pages/galeria.html
+++ b/pages/galeria.html
@@ -30,8 +30,8 @@
                 <p>Un café para ronronear</p>
             </div>
         </a>
-
     </header>
+    <!--Deje la etiqueta nav afuera para que el logo del header saliera fuera de pantalla y el navegador este siempre visible-->
     <nav class="navbar navbar-expand-lg navbar-light bg-brown sticky-top">
         <div class="container">
             <button class="navbar-toggler my-2" type="button" data-bs-toggle="collapse"
@@ -68,7 +68,6 @@
                 invitamos a explorar nuestra vibrante <span class="texto-terciario">galería de imágenes</span> que
                 capturan la esencia de la felicidad gatuna
                 y la exquisitez de nuestras bebidas y alimentos.</p>
-
             <p>Desde <span class="texto-terciario">gatos</span> que derrochan amor hasta tazas de café humeante y
                 bocados tentadores, nuestra galería te
                 sumergirá en un mundo de emociones y sabores. Desplázate a través de nuestras fotos y deja que la
@@ -76,7 +75,8 @@
                 próxima visita. ¡Prepárate para un
                 recorrido visual que te hará ronronear de placer!</p>
         </div>
-
+        <!--el AOS en cada imagen hacia conflicto con las animaciones de zoom del hover
+            se anima el bloque completo de imagenes con AOS y se ponen en contenedores cada imagen para realizar el zoom con hover-->
         <div class="d-flex flex-wrap justify-content-center" data-aos="fade-up" data-aos-duration="1000"
             data-aos-once="true" data-aos-anchor-placement="bottom">
             <div class="img-container col-12 col-lg-3 m-3">
@@ -98,7 +98,6 @@
                 <img src="../assets/img/carta6.jpg" class="imgGal rounded-3" alt="Pastel de Zanahoria">
             </div>
         </div>
-
     </main>
     <div class="animaciones">
         <footer data-aos="fade-up" data-aos-duration="1000" data-aos-once=true class="container-fluid">
