--- a/404.html
+++ b/404.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Miau Café - Tu lugar para disfrutar de café y gatos</title>
+    <title>Error 404 | Miau Café</title>
     <meta name="description"
         content="Vive la experiencia única de disfrutar de café o té en compañía de encantadores gatos en Miau Café. Conoce a nuestros adorables mininos, explora sus perfiles y escapa del estrés diario en nuestro acogedor espacio. ¡Te esperamos!">
     <meta name="keywords"
@@ -50,7 +50,7 @@
                         <a class="nav-link" href="./pages/michis.html">Nuestros michis</a>
                     </li>
                     <li class="nav-item text-center">
-                        <a class="nav-link" href="./pages/acerca.html">Acerca</a>
+                        <a class="nav-link" href="./pages/acerca.html">Nuestra Historia</a>
                     </li>
                     <li class="nav-item text-center">
                         <a class="nav-link" href="./pages/contacto.html">Contacto</a>
@@ -757,7 +757,7 @@
         <footer data-aos="fade-up" data-aos-duration="1000" data-aos-once=true class="container-fluid">
             <div class="row">
                 <div class="d-flex justify-content-between px-3 flex-wrap mx-auto">
-                    <a href="/index.html" class="logofoot ">
+                    <a href="/index.html" class="logofoot p-lg-3">
                         <img src="/assets/img/logo_cat_cafe.png" alt="Logo Miau Café" class="logo col-12 col-lg-1">
                     </a>
                     <div class="pt-4 col-12 col-lg-7">
