--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                         <a class="nav-link" href="./pages/michis.html">Nuestros michis</a>
                     </li>
                     <li class="nav-item text-center">
-                        <a class="nav-link" href="./pages/acerca.html">Acerca</a>
+                        <a class="nav-link" href="./pages/acerca.html">Nuestra Historia</a>
                     </li>
                     <li class="nav-item text-center">
                         <a class="nav-link" href="./pages/contacto.html">Contacto</a>
@@ -89,7 +89,7 @@
         <div class="container my-5">
             <div class="row">
                 <div data-aos="fade-up" data-aos-anchor-placement="top-bottom" data-aos-duration="1000"
-                    data-aos-once=true class="col-12 mt-3 mb-5 col-lg-6 order-lg-last mt-lg-0 pt-lg-5">
+                    data-aos-once=true class="col-12 mt-3 mb-5 col-lg-6 order-lg-last mt-lg-0 ">
                     <h2>¡<span class="texto-terciario">Nuestros michis</span> te esperan!</h2>
                     <p>Nuestros adorables <span class="texto-terciario">mininos</span> de <span
                             class="texto-terciario">Miau Café</span>
@@ -123,7 +123,7 @@
         <footer data-aos="fade-up" data-aos-duration="1000" data-aos-once=true class="container-fluid">
             <div class="row">
                 <div class="d-flex justify-content-between px-3 flex-wrap mx-auto">
-                    <a href="./index.html" class="logofoot ">
+                    <a href="./index.html" class="logofoot p-lg-3">
                         <img src="./assets/img/logo_cat_cafe.png" alt="Logo Miau Café" class="logo col-12 col-lg-1">
                     </a>
                     <div class="pt-4 col-12 col-lg-7">
