--- a/pages/acerca.html
+++ b/pages/acerca.html
@@ -49,7 +49,7 @@
                         <a class="nav-link" href="./michis.html">Nuestros michis</a>
                     </li>
                     <li class="nav-item text-center">
-                        <a class="nav-link active" aria-current="page" href="#" id="activo">Acerca</a>
+                        <a class="nav-link active" aria-current="page" href="#" id="activo">Nuestra Historia</a>
                     </li>
                     <li class=" nav-item text-center">
                         <a class="nav-link" href="./contacto.html">Contacto</a>
@@ -59,9 +59,10 @@
         </div>
     </nav>
     <main>
-        <section class="container my-2 mb-4">
-            <div class="row animaciones">
-                <div data-aos="fade-center" class="col-12 col-lg-6 mb-4 ">
+        <section class="container my-2 mb-5">
+            <div class="row animaciones mb-5">
+                <div data-aos="fade-center" data-aos-anchor-placement="top-bottom" data-aos-duration="1000"
+                    data-aos-once=true" class="col-12 col-lg-6 ">
                     <h1 class="text-center mt-5 mb-3">Nuestra Historia</h1>
                     <p>La historia de <span class="texto-terciario">Miau Café</span> se teje con hilos de curiosidad,
                         travesuras
@@ -90,7 +91,7 @@
                             Café</span>, donde nuestros <span class="texto-terciario">gatos</span> son verdaderos
                         protagonistas!</p>
                 </div>
-                <div data-aos="zoom-in" class="col-12 col-lg-6">
+                <div data-aos="zoom-in" class="col-12 col-lg-6 p-lg-5">
                     <img src="../assets/img/logo_cat_cafe.png" alt="Logo Miau Café" class="img-fluid">
                 </div>
             </div>
@@ -105,7 +106,7 @@
         <footer data-aos="fade-up" data-aos-duration="1000" data-aos-once=true class="container-fluid">
             <div class="row">
                 <div class="d-flex justify-content-between px-3 flex-wrap mx-auto">
-                    <a href="../index.html" class="logofoot ">
+                    <a href="../index.html" class="logofoot p-lg-3">
                         <img src="../assets/img/logo_cat_cafe.png" alt="Logo Miau Café" class="logo col-12 col-lg-1">
                     </a>
                     <div class="pt-4 col-12 col-lg-7">
