--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -49,7 +49,7 @@
                         <a class="nav-link" href="./michis.html">Nuestros michis</a>
                     </li>
                     <li class="nav-item text-center">
-                        <a class="nav-link" href="./acerca.html">Acerca</a>
+                        <a class="nav-link" href="./acerca.html">Nuestra Historia</a>
                     </li>
                     <li class="nav-item text-center">
                         <a class="nav-link active" aria-current="page" href="#" id="activo">Contacto</a>
@@ -60,7 +60,8 @@
     </nav>
     <main class="mt-2">
         <section>
-            <div class="container my-5">
+            <div class="container my-5" data-aos="fade-center" data-aos-anchor-placement="top-bottom"
+                data-aos-duration="1000" data-aos-once=true">
                 <h1 class="text-center">¡Déjanos tus comentarios!</h1>
                 <p>¿Tienes preguntas, comentarios o simplemente quieres saludar a nuestros adorables <span
                         class="texto-terciario">gatos</span>? Estamos encantados de escucharte. En <span
@@ -114,6 +115,8 @@
                 </div>
             </div>
         </section>
+        <br>
+        <hr>
         <section class="animaciones">
             <div class="container my-5" data-aos="fade-up" data-aos-duration="500" data-aos-once=true>
                 <h2 class="text-center">¡Ven a visitarnos!</h2>
@@ -137,7 +140,7 @@
         <footer data-aos="fade-up" data-aos-duration="1000" data-aos-once=true class="container-fluid">
             <div class="row">
                 <div class="d-flex justify-content-between px-3 flex-wrap mx-auto">
-                    <a href="../index.html" class="logofoot ">
+                    <a href="../index.html" class="logofoot p-lg-3">
                         <img src="../assets/img/logo_cat_cafe.png" alt="Logo Miau Café" class="logo col-12 col-lg-1">
                     </a>
                     <div class="pt-4 col-12 col-lg-7">
