--- a/pages/galeria.html
+++ b/pages/galeria.html
@@ -50,7 +50,7 @@
                         <a class="nav-link" href="./michis.html">Nuestros michis</a>
                     </li>
                     <li class="nav-item text-center">
-                        <a class="nav-link" href="./acerca.html">Acerca</a>
+                        <a class="nav-link" href="./acerca.html">Nuestra Historia</a>
                     </li>
                     <li class="nav-item text-center">
                         <a class="nav-link" href="./contacto.html">Contacto</a>
@@ -77,7 +77,7 @@
         </div>
         <!--el AOS en cada imagen hacia conflicto con las animaciones de zoom del hover
             se anima el bloque completo de imagenes con AOS y se ponen en contenedores cada imagen para realizar el zoom con hover-->
-        <div class="d-flex flex-wrap justify-content-center" data-aos="fade-up" data-aos-duration="1000"
+        <div class="d-flex flex-wrap justify-content-center" data-aos="fade-down" data-aos-duration="1000"
             data-aos-once="true" data-aos-anchor-placement="bottom">
             <div class="img-container col-12 col-lg-3 m-3">
                 <img src="../assets/img/carta1.jpg" class="imgGal rounded-3" alt="Capuccino">
@@ -103,7 +103,7 @@
         <footer data-aos="fade-up" data-aos-duration="1000" data-aos-once=true class="container-fluid">
             <div class="row">
                 <div class="d-flex justify-content-between px-3 flex-wrap mx-auto">
-                    <a href="../index.html" class="logofoot ">
+                    <a href="../index.html" class="logofoot p-lg-3">
                         <img src="../assets/img/logo_cat_cafe.png" alt="Logo Miau Café" class="logo col-12 col-lg-1">
                     </a>
                     <div class="pt-4 col-12 col-lg-7">
