--- a/pages/michis.html
+++ b/pages/michis.html
@@ -49,7 +49,7 @@
                         <a class="nav-link active" aria-current="page" href="#" id="activo">Nuestros michis</a>
                     </li>
                     <li class="nav-item text-center">
-                        <a class="nav-link" href="./acerca.html">Acerca</a>
+                        <a class="nav-link" href="./acerca.html">Nuestra Historia</a>
                     </li>
                     <li class="nav-item text-center">
                         <a class="nav-link" href="./contacto.html">Contacto</a>
@@ -59,7 +59,8 @@
         </div>
     </nav>
     <main class="mt-2">
-        <div class="container my-5">
+        <div class="container my-5" data-aos="fade-center" data-aos-anchor-placement="top-bottom"
+            data-aos-duration="1000" data-aos-once=true">
             <h1 class="text-center mb-3">¡Conoce a nuestros <span class="texto-terciario">michis</span>!</h1>
             <p>Bienvenidos a la sección más encantadora de <span class="texto-terciario">Miau Café</span>, donde te
                 presentamos a los protagonistas de
@@ -132,7 +133,7 @@
         <footer data-aos="fade-up" data-aos-duration="1000" data-aos-once=true class="container-fluid">
             <div class="row">
                 <div class="d-flex justify-content-between px-3 flex-wrap mx-auto">
-                    <a href="../index.html" class="logofoot ">
+                    <a href="../index.html" class="logofoot p-lg-3">
                         <img src="../assets/img/logo_cat_cafe.png" alt="Logo Miau Café" class="logo col-12 col-lg-1">
                     </a>
                     <div class="pt-4 col-12 col-lg-7">
